# coffee_helper

./: README.md  pyproject.toml
src/coffee_helper/: main.py  reader.py  utils.py
src/coffee_helper/reports/: __init__.py  base.py  median_coffee.py
tests/: conftest.py  test_reader.py  test_utils.py
tests/reports/: test_median_coffee.py
